rustdesk/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rustdesk
  namespace: rustdesk
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rustdesk
  template:
    metadata:
      labels:
        app: rustdesk
    spec:
      nodeSelector:
        kubernetes.io/hostname: yeager
      containers:
        - name: rustdesk
          image: rustdesk/rustdesk-server:latest@sha256:696eeb859a7191e95eca697e5fbfffaaffa47dc4f8b339dad1a35312b7b6972e
          ports:
            - containerPort: 21115
              hostPort: 21115
              protocol: TCP
              name: hbbs-api
            - containerPort: 21116
              hostPort: 21116
              protocol: TCP
              name: hbbs-id-tcp
            - containerPort: 21116
              hostPort: 21116
              protocol: UDP
              name: hbbs-id-udp
            - containerPort: 21117
              hostPort: 21117
              protocol: TCP
              name: hbbr-relay
            - containerPort: 21118
              hostPort: 21118
              protocol: TCP
              name: web-client
            - containerPort: 21119
              hostPort: 21119
              protocol: TCP
              name: web-console
          volumeMounts:
            - name: data
              mountPath: /data
          livenessProbe:
            tcpSocket:
              port: 21116
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 21116
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "25m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: rustdesk-data
